--- a/ComputeMe/ComputeMe/Storyboard/InitialStoryboard.storyboard
+++ b/ComputeMe/ComputeMe/Storyboard/InitialStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="074-Bj-WkD">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13C1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="074-Bj-WkD">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -35,7 +35,7 @@
                                 <rect key="frame" x="20" y="190" width="280" height="48"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="COCOGOOSE" family="COCOGOOSE" pointSize="35"/>
-                                <state key="normal" title="Challenge"/>
+                                <state key="normal" title="challenge"/>
                                 <connections>
                                     <segue destination="Dhx-Ai-vCK" kind="push" id="VJ3-ar-hTQ"/>
                                 </connections>
@@ -44,7 +44,7 @@
                                 <rect key="frame" x="20" y="260" width="280" height="48"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="COCOGOOSE" family="COCOGOOSE" pointSize="35"/>
-                                <state key="normal" title="Classic"/>
+                                <state key="normal" title="classic"/>
                                 <connections>
                                     <segue destination="Dhx-Ai-vCK" kind="push" id="2tf-MA-lZw"/>
                                 </connections>
@@ -53,7 +53,7 @@
                                 <rect key="frame" x="20" y="330" width="280" height="48"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="COCOGOOSE" family="COCOGOOSE" pointSize="35"/>
-                                <state key="normal" title="Story"/>
+                                <state key="normal" title="story"/>
                                 <connections>
                                     <segue destination="Dhx-Ai-vCK" kind="push" id="hVr-re-ldW"/>
                                 </connections>
@@ -71,6 +71,13 @@
                                 </attributedString>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M82-7t-2VC">
+                                <rect key="frame" x="282" y="528" width="25" height="25"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button" image="Setting">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.12941177189350128" green="0.64313727617263794" blue="0.81568634510040283" alpha="1" colorSpace="deviceRGB"/>
                     </view>
@@ -78,6 +85,7 @@
                     <connections>
                         <outlet property="challengeButton" destination="imR-ZQ-TpV" id="EHe-I8-rIQ"/>
                         <outlet property="classicButton" destination="We3-di-mKf" id="Rju-p7-yww"/>
+                        <outlet property="settingButton" destination="M82-7t-2VC" id="QIn-mF-GJ8"/>
                         <outlet property="storyButton" destination="Ugb-co-aKg" id="vdL-3M-Put"/>
                     </connections>
                 </viewController>
@@ -212,6 +220,7 @@
     </scenes>
     <resources>
         <image name="Logo" width="200" height="200"/>
+        <image name="Setting" width="51" height="51"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
